--- a/package.json
+++ b/package.json
@@ -1,65 +1,33 @@
 {
   "name": "investigraph.dev",
-  "version": "0.0.1",
-  "description": "Landing page for the data pipeline framework investigraph",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "webpack serve --config webpack/webpack.config.dev.js",
-    "build": "cross-env BABEL_ENV=production webpack --config webpack/webpack.config.prod.js && npm run zip",
-    "zip": "zip -r build/build.zip build"
-  },
-  "repository": {
-    "url": "git@github.com:investigativedata/investigraph.dev.git",
-    "type": "git"
-  },
-  "browserslist": "> 0.25%, ie 11",
-  "author": "webkid.io",
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/cli": "^7.23.4",
-    "@babel/core": "^7.23.7",
-    "@babel/eslint-parser": "^7.23.3",
-    "@babel/preset-env": "^7.23.7",
-    "@babel/preset-react": "^7.23.3",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
-    "autoprefixer": "^10.4.16",
-    "babel-loader": "^9.1.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.8.1",
-    "eslint": "^8.56.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-webpack": "^0.13.8",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.1.2",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-webpack-plugin": "^4.0.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.7.6",
-    "postcss-loader": "^7.3.4",
-    "postcss-preset-env": "^9.3.0",
-    "prettier": "^3.1.1",
-    "react-refresh": "^0.14.0",
-    "react-svg-loader": "^3.0.3",
-    "style-loader": "^3.3.3",
-    "webpack": "^5.89.0",
-    "webpack-bundle-analyzer": "^4.10.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.10.0"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/inter": "^5.0.16",
-    "@mui/joy": "^5.0.0-beta.20",
-    "core-js": "^3.35.0",
-    "emotion-normalize": "^11.0.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@investigativedata/style": "^0.1.0",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/joy": "^5.0.0-beta.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.24",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "typescript": "^5.4.4",
+    "vite": "^5.2.8"
   }
 }
