--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/icons-material": "^5.15.16",
     "@mui/joy": "^5.0.0-beta.36",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-multi-carousel": "^2.8.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
