--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@investigativedata/style": "^0.1.3",
+    "@investigativedata/style": "0.1.3",
     "@mui/icons-material": "^5.15.16",
     "@mui/joy": "^5.0.0-beta.36",
     "react": "^18.3.1",
